Fix small layout issue

--- a/static/main.css
+++ b/static/main.css
@@ -43,6 +43,7 @@ header nav li {
 #nav-title {
   flex-grow: 1;
   font-weight: bold;
+  margin: 0;
   text-align: right;
 }
 
